--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -49,7 +49,7 @@
         <value>track</value>
       </setting>
       <setting name="Narrator" serializeAs="String">
-        <value>False</value>
+        <value />
       </setting>
       <setting name="GenreNaming" serializeAs="String">
         <value>standard</value>
@@ -165,6 +165,9 @@
     <audiamus.aaxconv.Properties.Settings>
       <setting name="NonParallel" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="FFmpeg64bitHours" serializeAs="String">
+        <value>0</value>
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </applicationSettings>
