--- a/src/AaxAudioConverter/Properties/Settings.settings
+++ b/src/AaxAudioConverter/Properties/Settings.settings
@@ -5,6 +5,9 @@
     <Setting Name="NonParallel" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="FFmpeg64bitHours" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
     <Setting Name="InputDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -15,6 +18,9 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RelaxedFFmpegVersionCheck" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="FileDateColumn" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ConvFormat" Type="audiamus.aaxconv.lib.EConvFormat" Scope="User">
@@ -35,8 +41,11 @@
     <Setting Name="TrackNumbering" Type="audiamus.aaxconv.lib.ETrackNumbering" Scope="User">
       <Value Profile="(Default)">track</Value>
     </Setting>
-    <Setting Name="Narrator" Type="System.Boolean" Scope="User">
+    <Setting Name="TotalTracks" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Narrator" Type="System.Nullable&lt;System.Boolean&gt;" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="GenreNaming" Type="audiamus.aaxconv.lib.EGeneralNaming" Scope="User">
       <Value Profile="(Default)">standard</Value>
@@ -85,6 +94,18 @@
     </Setting>
     <Setting Name="FlatFolderNaming" Type="audiamus.aaxconv.lib.EFlatFolderNaming" Scope="User">
       <Value Profile="(Default)">author_book</Value>
+    </Setting>
+    <Setting Name="WithSeriesTitle" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="NumDigitsSeriesSeqNo" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
+    <Setting Name="FullCaptionBookFolder" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="OutFolderConflict" Type="audiamus.aaxconv.lib.EOutFolderConflict" Scope="User">
+      <Value Profile="(Default)">ask</Value>
     </Setting>
     <Setting Name="ExtraMetaFiles" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
