--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   
   <System.Windows.Forms.ApplicationConfigurationSection>
-    <add key="DpiAwareness" value="PerMonitorV2" />
+    <add key="DpiAwareness" value="PerMonitorV2"/>
   </System.Windows.Forms.ApplicationConfigurationSection>
   
   <userSettings>
@@ -28,6 +28,9 @@
         <value />
       </setting>
       <setting name="RelaxedFFmpegVersionCheck" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FileDateColumn" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="ConvFormat" serializeAs="String">
@@ -48,8 +51,8 @@
       <setting name="TrackNumbering" serializeAs="String">
         <value>track</value>
       </setting>
-      <setting name="Narrator" serializeAs="String">
-        <value />
+      <setting name="TotalTracks" serializeAs="String">
+        <value>False</value>
       </setting>
       <setting name="GenreNaming" serializeAs="String">
         <value>standard</value>
@@ -93,6 +96,18 @@
       <setting name="FlatFolderNaming" serializeAs="String">
         <value>author_book</value>
       </setting>
+      <setting name="WithSeriesTitle" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="NumDigitsSeriesSeqNo" serializeAs="String">
+        <value>2</value>
+      </setting>
+      <setting name="FullCaptionBookFolder" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="OutFolderConflict" serializeAs="String">
+        <value>ask</value>
+      </setting>
       <setting name="ExtraMetaFiles" serializeAs="String">
         <value>False</value>
       </setting>
@@ -130,7 +145,7 @@
         <value>True</value>
       </setting>
       <setting name="M4B" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="AaxCopyMode" serializeAs="String">
         <value>no</value>
@@ -159,6 +174,9 @@
       <setting name="TagConductor" serializeAs="String">
         <value>none</value>
       </setting>
+      <setting name="OnlineUpdateOthersDeclined" serializeAs="String">
+        <value />
+      </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
@@ -168,6 +186,12 @@
       </setting>
       <setting name="FFmpeg64bitHours" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="OnlineUpdateUrl" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="OnlineUpdateDebug" serializeAs="String">
+        <value>False</value>
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </applicationSettings>
