--- a/src/AaxAudioConverterLib/packages.config
+++ b/src/AaxAudioConverterLib/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
-  <package id="z440.atl.core" version="3.20.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Ude.NetStandard" version="1.2.0" targetFramework="net48" />
+  <package id="z440.atl.core" version="4.17.0" targetFramework="net48" />
 </packages>
